--- a/resources/server/manifest.json
+++ b/resources/server/manifest.json
@@ -1,6 +1,6 @@
 {
-	"name": "Code - OSS",
-	"short_name": "Code- OSS",
+	"name": "Adaca One",
+	"short_name": "Adaca One",
 	"start_url": "/",
 	"lang": "en-US",
 	"display": "standalone",
